add process update dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
         Bước 2: Click chuyển đổi\nBước 3: Đợi quá trình chuyển đổi thành công\n
         Bước 4: Hoàn tất quá trình chuyển đổi click \"Save\" để lưu danh bạ mới</string>
     <string name="please_wait">Vui lòng đợi trong giây lát....</string>
+    <string name="please_do_not_turn_off_application">Vui lòng không tắt ứng dụng. Trước khi quá trình hoàn tất...</string>
+    <string name="completed">Hoàn tất chuyển đổi</string>
 </resources>
